--- a/dsa2197.md
+++ b/dsa2197.md
@@ -45,3 +45,48 @@ Constraints:
 The test cases are generated such that the values in the final array are less than or equal to 108.
 
 ---
+We’re asked to transform the array so that whenever two adjacent numbers are not coprime, we replace them with their LCM.
+
+Here’s the simplest way to think about it 👇
+Two numbers are non-coprime if they share a common factor > 1.
+Example:
+
+(6, 4) → gcd = 2 → non-coprime
+
+(7, 9) → gcd = 1 → coprime ✅
+
+So rule = merge non-coprime neighbors into their LCM.
+💡 Example:
+nums = [6, 4, 3]
+
+6 & 4 → non-coprime → merge → LCM(6,4)=12
+Now array = [12, 3]
+
+12 & 3 → non-coprime → merge → LCM(12,3)=12
+
+Final result = [12] ✅
+⚙️ Approach:
+
+Use a stack
+
+Push numbers one by one
+
+After pushing, check top two:
+
+If non-coprime → merge into LCM
+
+Repeat until stack top is coprime
+
+This ensures correct order & merges.
+Complexity:
+
+Each number pushed once, popped at most once → O(n log(max(nums))) (due to gcd).
+
+This problem is a beautiful combo of:
+
+Math (gcd & lcm)
+
+Stack mechanics
+
+Greedy merging
+
