--- a/dsa2353.md
+++ b/dsa2353.md
@@ -14,7 +14,7 @@ void changeRating(String food, int newRating) Changes the rating of the food ite
 String highestRated(String cuisine) Returns the name of the food item that has the highest rating for the given type of cuisine. If there is a tie, return the item with the lexicographically smaller name.
 Note that a string x is lexicographically smaller than string y if x comes before y in dictionary order, that is, either x is a prefix of y, or if i is the first position such that x[i] != y[i], then x[i] comes before y[i] in alphabetic order.
 
- 
+---
 
 Example 1:
 
@@ -38,6 +38,7 @@ foodRatings.highestRated("japanese"); // return "ramen"
                                       // Both "sushi" and "ramen" have a rating of 16.
                                       // However, "ramen" is lexicographically smaller than "sushi".
  
+---
 
 Constraints:
 
@@ -50,3 +51,84 @@ All the strings in foods are distinct.
 food will be the name of a food item in the system across all calls to changeRating.
 cuisine will be a type of cuisine of at least one food item in the system across all calls to highestRated.
 At most 2 * 104 calls in total will be made to changeRating and highestRated.
+
+---
+Today’s LeetCode POTD: Design a Food Ratings System 🍲⭐
+We need to:
+
+Track foods, their cuisines, & ratings
+
+Update ratings dynamically
+
+Always query the highest-rated food per cuisine
+
+Here’s how I broke it down 👇
+
+2/
+👉 We’re given three inputs:
+
+foods[] → list of food items
+
+cuisines[] → cuisine type of each food
+
+ratings[] → current rating of each food
+
+Operations:
+
+changeRating(food, newRating)
+
+highestRated(cuisine)
+
+3/
+💡 The real challenge:
+When ratings change, we must efficiently update & still fetch the highest-rated food instantly.
+
+And if two foods have the same rating → pick the one that’s lexicographically smaller (alphabetical order).
+
+4/
+⚙️ My approach:
+
+Map each food → its cuisine
+
+Map each food → its rating
+
+For each cuisine, maintain a sorted set of foods, ordered by:
+
+Higher rating first
+
+Then lexicographically smaller name
+
+5/
+When rating changes:
+
+Remove that food from its cuisine set
+
+Update rating
+
+Re-insert it → set automatically reorders ✅
+
+When querying:
+
+Just return the first element of the cuisine’s set → guaranteed highest rated.
+
+6/
+⏱️ Complexity:
+
+Updating a rating = O(log n) (set insertion/removal)
+
+Querying highest rated = O(1) (just pick first element)
+
+Efficient enough even for large input sizes 🚀
+
+7/
+This problem is a mix of:
+
+HashMaps (fast lookups)
+
+Ordered Sets (maintain sorted order)
+
+Custom comparators
+
+It’s a great exercise in data structure design 💡
+
+---
