--- a/dsa3484.md
+++ b/dsa3484.md
@@ -42,6 +42,67 @@ At most 104 calls will be made in total to setCell, resetCell, and getValue.
 
 ---
 
+LeetCode POTD 3484: Design Spreadsheet 📊
+We’re asked to build a mini Excel with 26 columns (A–Z) & a given number of rows.
+Cells can be set, reset, and used inside formulas like =A1+B2 or =5+7.
+
+Here’s how it works 👇
+
+2/
+🔹 Features to support:
+
+setCell("A1", 10) → put value in a cell
+
+resetCell("A1") → clear value (becomes 0)
+
+getValue("=A1+B2") → compute formula (sum of cell values or numbers)
+
+3/
+📌 Rules:
+
+If cell is never set → treat as 0
+
+Formula always in form =X+Y
+
+X & Y can be either integers or cell references
+
+Precedence: just evaluate both & add
+
+4/
+💡 Key Idea
+Use a hash map (dictionary) to store only the cells that were explicitly set.
+
+On setCell → update value
+
+On resetCell → set value to 0
+
+On getValue → parse the formula & lookup values (default = 0)
+
+5/
+👉 Example Walkthrough:
+
+setCell("A1", 10)
+
+getValue("=A1+6") → 10 + 6 = 16
+
+setCell("B2", 15)
+
+getValue("=A1+B2") → 10 + 15 = 25
+
+resetCell("A1") → 0
+
+getValue("=A1+B2") → 0 + 15 = 15 ✅
+
+6/
+This problem teaches:
+
+How to design real-world data models (spreadsheets)
+
+String parsing (=X+Y)
+
+HashMap lookups for fast evaluation
+
+---
 
 ```cpp
 #include <bits/stdc++.h>
