--- a/dsa3508.md
+++ b/dsa3508.md
@@ -73,3 +73,124 @@ At most 105 calls will be made to addPacket, forwardPacket, and getCount methods
 queries for addPacket will be made in increasing order of timestamp.
 
 ---
+1/
+Today’s LeetCode POTD: Implement Router 🌐
+We need to design a data structure that manages network packets with:
+
+source, destination, timestamp
+
+Limited memory
+
+FIFO forwarding
+
+Here’s the breakdown 👇
+
+2/
+📦 Core Rules:
+
+Memory Limit: Router can only hold a fixed number of packets.
+→ If it’s full & a new packet arrives → remove the oldest one.
+
+Duplicates: If the same (source, destination, timestamp) already exists → reject it.
+
+3/
+📤 Forwarding Rule:
+
+Packets are forwarded in FIFO (First In, First Out) order.
+
+Forwarding = remove it from memory & return its details.
+
+If nothing left → return empty.
+
+4/
+📊 Counting Packets:
+We can query → “How many packets with destination = X have timestamps in [startTime, endTime]?”
+👉 Only counts packets still in memory.
+
+5/
+💡 Key Insights:
+
+Use a queue to manage FIFO.
+
+Use hashmaps to quickly check duplicates & count per destination.
+
+Since addPacket queries are given in increasing timestamp, we can keep timestamps sorted for efficient range queries.
+
+6/
+Why I liked this problem:
+✔️ Mix of DSA + System Design
+✔️ Teaches how routers buffer & forward data
+✔️ Involves duplicate handling, capacity control, and efficient queries
+
+---
+
+```cpp
+class Router {
+private:
+    int size;
+    unordered_map<long long, vector<int>> packets;
+    unordered_map<int, vector<int>> counts;
+    queue<long long> q;
+
+    long long encode(int source, int destination, int timestamp) {
+        return ((long long)source << 40) | ((long long)destination << 20) | timestamp;
+    }
+
+    int lowerBound(vector<int>& list, int target) {
+        return (int)(lower_bound(list.begin(), list.end(), target) - list.begin());
+    }
+
+    int upperBound(vector<int>& list, int target) {
+        return (int)(upper_bound(list.begin(), list.end(), target) - list.begin());
+    }
+
+public:
+    Router(int memoryLimit) {
+        size = memoryLimit;
+    }
+
+    bool addPacket(int source, int destination, int timestamp) {
+        long long key = encode(source, destination, timestamp);
+
+        if (packets.find(key) != packets.end())
+            return false;
+
+        if ((int)packets.size() >= size)
+            forwardPacket();
+
+        packets[key] = {source, destination, timestamp};
+        q.push(key);
+        counts[destination].push_back(timestamp);
+
+        return true;
+    }
+
+    vector<int> forwardPacket() {
+        if (packets.empty()) return {};
+
+        long long key = q.front();
+        q.pop();
+
+        vector<int> packet = packets[key];
+        packets.erase(key);
+
+        int dest = packet[1];
+        counts[dest].erase(counts[dest].begin());  // remove earliest timestamp
+
+        return packet;
+    }
+
+    int getCount(int destination, int startTime, int endTime) {
+        auto it = counts.find(destination);
+        if (it == counts.end() || it->second.empty())
+            return 0;
+
+        vector<int>& list = it->second;
+
+        int left = lowerBound(list, startTime);
+        int right = upperBound(list, endTime);
+
+        return right - left;
+    }
+};
+```
