--- a/dsa1912.md
+++ b/dsa1912.md
@@ -50,6 +50,65 @@ At most 105 calls in total will be made to search, rent, drop and report.
 
 ---
 
+1/
+LeetCode POTD: Design Movie Renting System 🎥📀
+
+We need to build a system that can:
+
+Search cheapest shops for a movie
+
+Rent a movie
+
+Drop (return) a movie
+
+Report cheapest currently rented movies
+
+Here’s the breakdown 👇
+
+2/
+🔍 Search:
+Find up to 5 shops with the cheapest price for a movie.
+If tie → smaller shop ID wins.
+If fewer than 5 available → return all.
+
+3/
+🎟️ Rent:
+When a shop rents a movie → that copy is no longer available in search results.
+
+📦 Drop (Return):
+When returned → it goes back into the “unrented pool” for search.
+
+4/
+📊 Report:
+Get up to 5 cheapest rented movies, sorted by:
+
+Price
+
+Shop ID (if tie)
+
+Movie ID (if tie again)
+
+5/
+💡 Key Idea to Solve:
+
+Use sorted sets / heaps for efficient lookups
+
+Keep 2 groups:
+• Unrented movies (by movie → sorted by price & shop)
+• Rented movies (global → sorted by price, shop, movie)
+
+Hashmap to quickly find price
+
+6/
+This problem teaches:
+
+How to design systems with multiple operations
+
+Smart use of hashmaps + ordered sets
+
+Thinking in terms of real-world system design
+
+---
 ```cpp
 struct unrentedComparator {
     bool operator()(const pair<int,int>& p1,const pair<int,int>& p2) const {
