--- a/dsa3005.md
+++ b/dsa3005.md
@@ -28,6 +28,52 @@ Constraints:
 1 <= nums[i] <= 100
  
 ---
+
+3005. Count Elements With Maximum Frequency
+A very simple but tricky counting problem. Let’s break it down 🧵👇
+
+Tweet 2
+We’re given an array of numbers.
+👉 Each number has a frequency (how many times it appears).
+👉 We need the total count of all numbers that appear the most.
+
+Tweet 3
+🔹 Example 1: nums = [1,2,2,3,1,4]
+
+Frequency(1) = 2
+
+Frequency(2) = 2
+
+Frequency(3) = 1
+
+Frequency(4) = 1
+
+Max frequency = 2 → Elements with this frequency = {1, 2}
+So total = 2 + 2 = 4 ✅
+
+Tweet 4
+🔹 Example 2: nums = [1,2,3,4,5]
+Here every element appears once.
+👉 Max frequency = 1
+👉 All 5 elements have this frequency
+So answer = 1+1+1+1+1 = 5 ✅
+
+Tweet 5 (Intuition 🤔)
+The trick is:
+
+Count frequencies of all numbers.
+
+Find the maximum frequency.
+
+Add up all counts of numbers having that frequency.
+
+That’s it 🎯
+
+Tweet 6 (Closing 🚀)
+Easy observation → frequency map + max frequency check 👌
+One of those problems where brute-force thinking already leads to the correct approach.
+
+---
 ```cpp
 
 class Solution {
