--- a/dsa165.md
+++ b/dsa165.md
@@ -52,6 +52,60 @@ All the given revisions in version1 and version2 can be stored in a 32-bit integ
 
 ---
 
+## LeetCode POTD 🎯
+165. Compare Version Numbers
+At first glance, it looks like a simple string comparison… but it’s trickier than that 👀
+Here’s the breakdown 🧵👇
+
+## 2
+A version string looks like:
+1.2.3 or 1.10 or 1.01.0
+
+👉 Each part between dots . is called a revision.
+👉 Revisions are compared as integers (ignoring leading zeros).
+👉 Missing revisions = treated as 0.
+
+## 3 (Example 1)
+version1 = "1.2"
+version2 = "1.10"
+
+Compare left to right:
+
+First revision: 1 vs 1 → equal
+
+Second revision: 2 vs 10 → 2 < 10
+
+So → version1 < version2 ✅ → answer = -1
+
+##  4 (Example 2)
+version1 = "1.01"
+version2 = "1.001"
+
+Ignore leading zeros → both are just 1.
+All revisions equal → answer = 0 ✅
+
+## 5 (Example 3)
+version1 = "1.0"
+version2 = "1.0.0.0"
+
+Extra missing revisions treated as 0 → equal.
+Answer = 0 ✅
+
+##  6 (Intuition 🤔)
+The trick is simple:
+
+Split both versions into parts (by .).
+
+Compare numbers one by one.
+
+If one version runs out of parts → fill with 0.
+
+First difference decides the result.
+
+## 7 (Closing 🚀)
+
+This problem shows how tiny details (like leading zeros or missing revisions) can break naive solutions. Careful parsing wins the game 💡
+
 
 ---
 
