--- a/dsa166.md
+++ b/dsa166.md
@@ -29,8 +29,73 @@ Constraints:
 denominator != 0
 
 ---
+1/
+We’re given a fraction numerator/denominator and need to return its decimal form.
+But there’s a catch 👀 … if the decimal part repeats, we must enclose it in ()
 
+Example:
 
+1/2 → 0.5
+
+2/1 → 2
+
+4/333 → 0.(012)
+
+2/
+👉 The key challenges:
+
+Handling negative numbers
+
+Dealing with remainders carefully
+
+Detecting cycles in the fractional part (the repeating sequence)
+
+This isn’t just division — it’s about spotting when remainders repeat. 🔄
+
+3/
+✨ Intuition:
+Whenever you do long division, the moment a remainder repeats → the digits after that point will also repeat.
+
+So we track each remainder’s position in the decimal string.
+The first time it repeats → wrap the digits in parentheses.
+
+4/
+⚡ Steps to solve:
+
+Handle sign & convert to absolute values
+
+Do integer division → this is the whole part
+
+Start processing remainder
+
+Keep a map: remainder → position in result
+
+If remainder repeats → insert ( at stored position and add ) at the end
+
+5/
+🔥 Example Walkthrough: 4/333
+
+Whole part: 0.
+
+Long division → remainders cycle after a few steps
+
+Once remainder repeats → insert ( at first occurrence
+
+Final result: 0.(012)
+
+6/
+That’s it! This problem beautifully mixes:
+
+Math intuition (long division)
+
+Hashmap trick (tracking remainder positions)
+
+String manipulation (inserting parentheses)
+
+7/
+Every time remainder-based questions pop up, remember:
+“Repeating remainder = repeating pattern.”
+---
 ```cpp
 class Solution {
 public:
