--- a/dsa120.md
+++ b/dsa120.md
@@ -33,3 +33,18 @@ Follow up: Could you do this using only O(n) extra space, where n is the total n
 
 ---
 
+```cpp
+class Solution {
+public:
+    int minimumTotal(vector<vector<int>>& triangle) {
+        int n = triangle.size();
+        for (int i = n - 2; i >= 0; i--) {
+            for (int j = 0; j < triangle[i].size(); j++) {
+                triangle[i][j] += min(triangle[i+1][j], triangle[i+1][j+1]);
+            }
+        }
+        return triangle[0][0];
+    }
+};
+
+```
