--- a/dsa120.md
+++ b/dsa120.md
@@ -33,6 +33,55 @@ Follow up: Could you do this using only O(n) extra space, where n is the total n
 
 ---
 
+1 (Hook):
+Today’s LeetCode POTD – Triangle 🔺
+A DP classic where we need to find the minimum path sum from top to bottom. Let’s break it down simply 👇 #LeetCode #DSA
+
+Tweet 2:
+We’re given a triangle like:
+
+   2  
+  3 4  
+ 6 5 7  
+4 1 8 3
+
+
+From the top, you can move down to adjacent numbers only.
+Our goal? Find the smallest possible sum.
+
+Tweet 3:
+💡 Intuition:
+Instead of starting from the top (which has too many choices), start from the bottom.
+
+At each step, decide:
+👉 “If I’m here, what’s the minimum path I can take below me?”
+
+Tweet 4:
+Work bottom-up:
+
+Take the last row as the base.
+
+Move upward, each element becomes:
+value + min(leftDown, rightDown)
+
+By the time we reach the top, that’s our answer ✅
+
+Tweet 5 (Engagement):
+Why this works:
+
+We’re reducing overlapping subproblems
+
+No need for recursion or big memory
+
+Just pure DP efficiency 💯
+
+Final answer for the example? 11
+
+Tweet 6 (Closer):
+This problem shows the power of thinking bottom-up in DP 🔥
+Instead of building paths, we collapse choices into minimums.
+---
+
 ```cpp
 class Solution {
 public:
