--- a/dsa611.md
+++ b/dsa611.md
@@ -23,7 +23,29 @@ Constraints:
 0 <= nums[i] <= 1000
 
 ---
+```cpp
+class Solution {
+public:
+    int triangleNumber(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+        int n = nums.size();
+        int count = 0;
 
+        for (int i = n - 1; i >= 1; i--) {
+            int left = 0, right = i - 1;
+            while (left < right) {
+                if (nums[left] + nums[right] > nums[i]) {
+                    count += right - left;
+                    right--;
+                } else {
+                    left++;
+                }
+            }
+        }
+        return count;
+    }
+};
+```
 
 
 ---
