--- a/dsa611.md
+++ b/dsa611.md
@@ -23,6 +23,52 @@ Constraints:
 0 <= nums[i] <= 1000
 
 ---
+
+1/
+We’re given an array of side lengths.
+Task → Count how many triplets form a valid triangle.
+
+Rule reminder:
+👉 In a triangle, sum of two smaller sides > largest side.
+
+2/
+Naive approach?
+Check all triplets → O(n³).
+Works for small inputs, but not scalable. 🚫
+
+We need something smarter.
+
+3/
+💡 Trick: Sort the array first.
+Now, for every triplet, the largest side will always be at the end of our selection.
+
+So the triangle condition reduces to:
+nums[left] + nums[right] > nums[i]
+
+4/
+Use two pointers:
+
+Fix the largest side at index i
+
+Start with left = 0 and right = i-1
+
+If condition holds → all elements between left and right can form valid triangles.
+
+Else → move left ahead.
+
+5/
+Result → O(n²) solution.
+Way faster than brute force and works for up to 1000 elements easily. ⚡
+
+6/
+✨ Key insight:
+Sorting reduces the 3-side check to a 2-pointer sliding window problem.
+Triangle inequality simplified beautifully.
+
+7/
+That’s #611 done ✅
+Another classic example of combining sorting + two pointers to crack a geometry-based problem.
+---
 ```cpp
 class Solution {
 public:
@@ -46,8 +92,5 @@ public:
     }
 };
 ```
-
-
----
 
 
