--- a/dsa812.md
+++ b/dsa812.md
@@ -23,6 +23,37 @@ All the given points are unique.
 
 ---
 
+Tweet 1 (Hook):
+Geometry meets coding 🌀
+Today’s #LeetCode POTD was about finding the largest triangle area you can form from given points on a plane. Sounds simple, but it needs a neat trick! Let’s break it down ⬇️
+
+Tweet 2 (Problem in simple words):
+We’re given coordinates of points.
+Pick any 3 points → they form a triangle.
+Question: What’s the area of the biggest triangle possible?
+
+Tweet 3 (Key Insight):
+To find the area of a triangle from 3 points (x1,y1), (x2,y2), (x3,y3), we use this shoelace formula 👇
+
+Area = 0.5 * | x1(y2−y3) + x2(y3−y1) + x3(y1−y2) |
+
+No trigonometry, just pure coordinate geometry ❤️
+
+Tweet 4 (Approach):
+
+Loop through all triplets of points.
+
+Compute triangle area using the formula.
+
+Keep track of the maximum area found.
+
+Since max points ≤ 50 → brute force (n³) works fine ✅
+
+Tweet 5 (Conclusion):
+That’s it! Simple geometry + iteration.
+Final answer: maximum area among all triplets.
+
+Sometimes brute force + the right formula is all you need 😉
 
 ---
 
