--- a/dsa976.md
+++ b/dsa976.md
@@ -26,6 +26,40 @@ Constraints:
 
 ---
 
+Tweet 1 (Hook):
+🔺 Today’s #LeetCode POTD was about Triangles.
+The challenge? From an array of numbers (side lengths), find the largest perimeter triangle that can actually exist.
+Sounds easy? Let’s break it down 👇 #100DaysOfCode #dsa
+
+Tweet 2 (Core Idea):
+A triangle is only valid if the sum of any two sides > the third side.
+👉 So the trick is:
+
+Sort the sides (biggest to smallest).
+
+Pick the largest 3 numbers & check validity.
+
+If not valid, move to the next 3.
+
+Tweet 3 (Intuition):
+Why sort?
+Because the largest perimeter will always involve the biggest sides.
+So instead of checking all triplets (which is costly), we just move from the biggest downwards.
+
+Tweet 4 (Example):
+nums = [2,1,2]
+Sorted → [2,2,1]
+Check: 2 < 2+1 ✅ valid!
+Perimeter = 2+2+1 = 5 🎉
+
+nums = [1,2,1,10]
+Largest combos all fail ❌ → Answer = 0.
+
+Tweet 5 (Wrap-up):
+This problem is a beautiful reminder that:
+👉 Sorting often simplifies greedy problems.
+👉 Math rules (like triangle inequality) can cut down brute force.
+
 
 
 ---
