--- a/dsa1039.md
+++ b/dsa1039.md
@@ -47,7 +47,63 @@ n == values.length
 
 
 ---
+1/ You have a convex polygon 🔺🔺🔺
+Each vertex has a value.
+When you divide it into triangles, each triangle’s score = product of its 3 vertices.
 
+Goal: Minimize the total score after full triangulation.
+
+2/ Key Insight 💡
+
+A polygon with n vertices always forms n-2 triangles.
+
+The order of dividing matters! Different triangulations = different total scores.
+
+So we need the minimum possible sum of all triangle weights.
+
+3/ Brute force ❌
+Try all ways to triangulate → exponential blowup 😵
+
+Instead…
+Think: if I fix a triangle (i, j, k) inside the polygon → it splits the polygon into smaller ones.
+
+4/ DP Formulation 🧩
+Let dp[i][j] = minimum score for triangulating polygon between vertices i…j.
+
+Transition:
+Choose a middle point k between i and j.
+Cost = dp[i][k] + dp[k][j] + values[i] * values[k] * values[j].
+
+Take the minimum over all k.
+
+5/ Build it up 🔨
+Start with small polygons (length 3 = base triangle).
+Expand gradually until full polygon is solved.
+
+At the end → dp[0][n-1] gives the answer ✅
+
+6/ Why it works 🤔
+
+Each triangulation must pick one triangle (i, k, j) at a time.
+
+DP ensures we combine optimal sub-triangulations.
+
+Bottom-up guarantees we don’t recompute.
+
+Time: O(n^3)
+Space: O(n^2)
+(Safe for n ≤ 50)
+
+7/ Takeaway 🌟
+This problem is a blueprint for:
+
+Polygon DP
+
+Optimal substructure in geometric problems
+
+Converting exponential recursion into polynomial DP
+
+Another DP gem solved 💎
 
 
 ---
