--- a/dsa2221.md
+++ b/dsa2221.md
@@ -33,6 +33,47 @@ Constraints:
 
 ---
 
+Tweet 1 (Hook):
+🚀 Today’s #LeetCode POTD is Triangular Sum of an Array.
+At first, it looks like a tough iterative problem… but if you zoom out 👀, the solution is actually super intuitive.
+Let’s break it down step by step 🧵👇
+
+Tweet 2 (Setup):
+You’re given an array of digits (0–9).
+👉 Repeatedly replace it by summing adjacent elements & taking last digit (%10).
+👉 Stop when only ONE number remains.
+That’s your Triangular Sum 🎯.
+
+Tweet 3 (Example):
+Example: [1,2,3,4,5]
+Step 1 → [3,5,7,9] → [3,5,7,9] %10 = [3,5,7,9]
+Step 2 → [8,2,6]
+Step 3 → [0,8]
+Step 4 → [8] ✅ Final Answer = 8
+
+Notice the triangle collapsing effect? 🔻
+
+Tweet 4 (Intuition):
+Instead of building the whole triangle, we can just update the array in place at each step:
+
+Replace nums[i] with (nums[i] + nums[i+1]) % 10.
+
+Shrink array size until 1 element left.
+
+Simple, clean, O(n²) → still fine for n ≤ 1000.
+
+Tweet 5 (Engagement):
+This problem looks scary… but the trick is:
+👉 Don’t overthink.
+👉 Just simulate the process step by step.
+👉 Update the array until only one number remains.
+
+It’s like watching a pyramid collapse into a single stone 🔻💎
+
+Tweet 6 (Closing + CTA):
+✅ Key takeaway: Sometimes brute-force simulation is exactly what’s expected.
+Not every problem hides a scary math trick 😉
+
 
 ---
 ```cpp
