--- a/dsa1518.md
+++ b/dsa1518.md
@@ -31,3 +31,23 @@ Constraints:
 
 ---
 
+
+```cpp
+
+class Solution {
+public:
+    int numWaterBottles(int numBottles, int numExchange) {
+        int ans = numBottles;
+        int empty = numBottles;
+
+        while (empty >= numExchange) {
+            int newBottles = empty / numExchange;
+            ans += newBottles;
+            empty = newBottles + (empty % numExchange);
+        }
+
+        return ans;
+    }
+};
+
+```
