--- a/dsa1518.md
+++ b/dsa1518.md
@@ -31,7 +31,66 @@ Constraints:
 
 ---
 
+1/ Imagine you have numBottles full bottles of water.
+Every time you finish one, you get an empty bottle.
+Now, the shopkeeper lets you trade numExchange empty bottles for 1 full bottle.
 
+How many total bottles can you drink? 💧
+
+2/ Key insight:
+Every full bottle = 1 drink.
+Every empty bottle = a chance to recycle into a new drink.
+
+So we keep drinking, collecting empties, and trading them in until we don’t have enough for another exchange. 🔄
+
+3/ Example 1:
+Start: 9 bottles 🍶
+Drink all → 9 empty
+Exchange 9/3 = 3 new bottles
+Drink → +3 = 12 total
+Now 3 empties → 1 new bottle
+Drink → +1 = 13 total ✅
+
+4/ Example 2:
+Start: 15 bottles
+Drink all → 15 empties
+Exchange 15/4 = 3 new bottles
+Drink → total = 18
+Now 3 empties + leftover → trade 1 more
+Drink → 19 total ✅
+
+5/ The process is simple:
+
+Drink → collect empties
+
+Trade empties for new bottles
+
+Repeat until you can’t trade anymore
+
+The trick? Keep track of both new bottles gained and leftover empties.
+
+6/ Why this problem matters ⚡
+It teaches greedy simulation:
+
+Always maximize the immediate benefit (exchange whenever possible).
+
+No DP/complex math needed.
+
+Just simulate carefully until stuck.
+
+7/ This is a classic resource exchange problem.
+Think about soda cans, reward points, or even loyalty cards 🛒.
+If you can recycle/trade something for more, keep doing it until the system blocks you.
+
+8/ Final Thought 💡
+Greedy strategies often feel “too simple”… but in problems like this, that’s exactly the beauty.
+
+Once you frame it as:
+👉 Drink → Empty → Exchange → Repeat
+…the problem solves itself.
+
+
+---
 ```cpp
 
 class Solution {
