--- a/dsa3100.md
+++ b/dsa3100.md
@@ -32,3 +32,21 @@ Constraints:
 1 <= numExchange <= 100
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int maxBottlesDrunk(int numBottles, int numExchange) {
+        int res = numBottles; 
+        int emp = numBottles;
+        while (emp >= numExchange) {
+            emp -= numExchange;
+            res++;
+            emp++;
+            numExchange++;
+        }
+        return res;
+    }
+};
+```
