--- a/dsa3100.md
+++ b/dsa3100.md
@@ -33,6 +33,68 @@ Constraints:
 
 ---
 
+1/
+3100. Water Bottles II 💧
+This LeetCode problem looks simple at first… but there’s a sneaky twist 👀.
+Let me break it down in plain English — no code, just logic. #LeetCode #DSA
+
+2/
+👉 You start with some full bottles.
+👉 When you drink, you get empty bottles.
+👉 You can exchange a fixed number of empty bottles for 1 new full bottle.
+👉 But here’s the catch: every time you exchange, the cost increases by +1 😮.
+
+3/
+So the real question is:
+“How many bottles can you drink before you can’t exchange anymore?” 🥤
+
+Sounds like a brain teaser, right? Let’s play it out…
+
+4/
+Imagine you have 13 bottles and exchange rate = 6.
+
+Drink 13 → 13 empties
+
+Trade 6 empties → +1 full (now exchange = 7)
+
+Drink that 1 → more empties
+
+Repeat until you can’t afford the new exchange rate.
+
+5/
+What’s happening under the hood?
+
+✅ We always keep track of 2 things:
+
+Total bottles drunk (our answer 📈)
+
+Current empty bottles (our “currency” 💰)
+
+At every step:
+
+Spend empties to get 1 full
+
+Drink it → empties go up again
+
+Exchange cost goes up by +1
+
+6/
+Notice the tradeoff:
+The longer you go, the harder it gets to exchange.
+At some point, the empties aren’t enough to meet the rising cost. That’s where you stop. 🚫
+
+7/
+Key insight 💡:
+It’s just a simulation problem.
+Drink → Exchange → Cost increases → Repeat.
+No fancy DP or math trick needed, just careful bookkeeping.
+
+8/
+Final takeaway ✨:
+Even simple-looking problems hide layers when a small twist (like increasing cost) is added.
+That’s why practicing these “story-like” problems builds intuition fast 🚀
+
+---
 
 ```cpp
 class Solution {
