--- a/dsa011.md
+++ b/dsa011.md
@@ -28,3 +28,24 @@ n == height.length
 0 <= height[i] <= 10^4
 
 ---
+
+```cpp
+
+class Solution {
+public:
+    int maxArea(vector<int>& height) {
+        int i = 0;
+        int j = height.size() - 1;
+        int res = 0;
+
+        while (i < j) {
+            res = max(res, (j - i) * min(height[i], height[j]));
+            if (height[i] < height[j]) i++;
+            else j--;
+        }
+
+        return res;
+    }
+};
+
+```
