--- a/dsa417.md
+++ b/dsa417.md
@@ -45,8 +45,70 @@ n == heights[r].length
 0 <= heights[r][c] <= 10^5
 
 ---
+Tweet 1 (Hook):
+🌊 Imagine rain falling on a mountain island…
+Some water flows into the Pacific, some into the Atlantic.
+But here’s the twist: which cells can flow into both oceans at once?
+That’s today’s LeetCode POTD (#417 Pacific Atlantic Water Flow). Let’s break it down 🧵
+#LeetCode #DSA #100DaysOfCode
+
+Tweet 2:
+Setup:
+
+Left & Top edges touch the Pacific 🌊
+
+Right & Bottom edges touch the Atlantic 🌊
+
+Water flows from a higher/equal cell → to a lower/equal neighbor.
+
+Question: Find all cells where rainwater can flow to both oceans.
+
+Tweet 3:
+At first glance, it feels like we need to simulate flow from each cell.
+But that would be way too slow. 😅
+Instead, let’s flip the perspective:
+👉 Instead of sending water out, let the oceans push inward.
+
+Tweet 4:
+Think of both oceans as armies 🌊 marching into the island.
+
+Pacific starts from the top & left edges.
+
+Atlantic starts from the bottom & right edges.
+Rule: They can only march uphill or flat (to equal or higher cells).
+
+Tweet 5:
+So we run two BFS/DFS waves:
+1️⃣ One from Pacific edges → mark all reachable cells.
+2️⃣ One from Atlantic edges → mark all reachable cells.
+The intersection = cells that can reach both oceans! ✅
+
+Tweet 6:
+This approach is neat because:
+
+We only start from the borders.
+
+Each cell is visited at most twice.
+
+We avoid brute-forcing from every cell.
+⏱️ Time complexity ~ O(m*n).
+
+Tweet 7 (Engagement):
+In Example 1, cells like (0,4), (1,3), (3,0) can flow both ways.
+In Example 2 (just 1 cell), that lone cell touches both oceans directly.
+🌧️ Isn’t it cool how flipping perspective makes the problem so much easier?
+
+Tweet 8 (Closing):
+So the key insight:
+Don’t simulate water leaving → simulate oceans entering. 🌊
+This reversal turns a messy flow problem into a clean graph traversal.
+
+Would you like me to post a similar step-by-step visual explanation for this? 👀📊
+
+#LeetCode #DSA #GraphTheory #Coding
 
 
+---
 ```cpp
 
 class Solution {
