--- a/dsa778.md
+++ b/dsa778.md
@@ -38,6 +38,83 @@ Each value grid[i][j] is unique.
 
 ---
 
+Tweet 1 (Hook):
+🌊 Imagine being stuck in a city where water keeps rising…
+You start at the top-left corner & need to reach the bottom-right corner.
+When’s the earliest time you can swim there safely?
+That’s today’s LeetCode POTD: Swim in Rising Water (778) 🧵
+#LeetCode #DSA #100DaysOfCode
+
+Tweet 2:
+The challenge:
+
+Each cell has a unique elevation.
+
+Water level = time.
+
+At time t, you can only move on cells ≤ t.
+
+Goal: find the minimum t when start (0,0) connects to end (n-1,n-1).
+
+Sounds simple, but tricky when the grid is full of ups & downs.
+
+Tweet 3 (Analogy):
+Think of it like waiting for flood water to rise 🌧️:
+➡️ You can only swim into streets submerged under water.
+➡️ The higher the wall, the longer you must wait.
+➡️ The path is possible once all barriers along your route are underwater.
+
+Tweet 4:
+How do we solve it? Two key insights:
+
+The problem is about finding the minimum elevation barrier on a path.
+
+If water level ≥ that barrier, the path is open.
+
+So basically → minimize the maximum height you must cross.
+
+Tweet 5:
+One smart way: Binary Search on Time + DFS/BFS ⏳
+
+Guess a water level t.
+
+Check if you can swim from start to end when water = t.
+
+If yes → try lower. If no → wait longer.
+This narrows down the exact minimum time.
+
+Tweet 6:
+Alternative (also common):
+Use a Min-Heap (Dijkstra style).
+
+Always expand the lowest elevation cell reachable.
+
+Keep track of the max elevation seen so far = water level needed.
+
+Once you reach the target cell → that’s your answer.
+
+Tweet 7 (Engagement):
+Example:
+
+In grid [[0,2],[1,3]], you wait till t=3.
+
+In the bigger grid with highs & lows, answer = 16.
+
+Do you also visualize it like water slowly flooding a maze? 🌊😅
+
+Tweet 8 (Closing):
+✨ Key takeaway:
+Don’t just look at when you can move → look at the worst block on the best path.
+That block decides the time you must wait.
+
+Would you like me to make a thread comparing this to Trapping Rain Water II (407)? Both are “water + grid” problems but with very different twists. 🤔💧
+
+#LeetCode #Coding #DSA
+
+
+---
+
+
 ```cpp
 
 class Solution {
