--- a/dsa1488.md
+++ b/dsa1488.md
@@ -51,6 +51,78 @@ Constraints:
 
 ---
 
+Tweet 1 (Hook):
+🌧️ Imagine a city with infinite lakes… but every time it rains, lakes fill up.
+If a full lake rains again → FLOOD! 😱
+How do you avoid floods?
+LeetCode #1488 makes us think like city planners 🏙️💧
+Let’s break it down 🧵
+#DSA #LeetCode #100DaysOfCode
+
+Tweet 2:
+Here’s the scenario:
+
+rains[i] > 0 → lake i gets full
+
+rains[i] == 0 → dry any lake you want
+Goal: Never let a lake flood. Easy? Not really… 🤯
+
+Tweet 3 (Analogy):
+Think of it like parking lots:
+
+Rain = a car comes in → fill a parking spot
+
+0 = empty day → you can remove a car to prevent congestion
+If you pick wrong → a car has nowhere to park → disaster 😅
+
+Tweet 4 (Core Idea):
+Key insight:
+
+Keep track of which lakes are full
+
+When it rains on a lake that’s already full, we must have dried it earlier
+
+So, zero days are precious → use them strategically
+
+Tweet 5 (Strategy):
+Step-by-step:
+
+Track all full lakes
+
+For each rain, check if lake is already full
+
+If yes → find the earliest zero day after last rain to dry it
+
+If no such zero day → flood is unavoidable 🚨
+
+Tweet 6 (Visualization):
+Example: rains = [1,2,0,0,2,1]
+
+Day 1 → lake 1 full
+
+Day 2 → lake 2 full
+
+Day 3 → dry lake 2
+
+Day 4 → dry lake 1
+
+Day 5-6 → rains fill lakes again safely ✅
+See? Proper planning saves the city 🌆
+
+Tweet 7 (Engagement):
+The lesson?
+It’s all about timing & planning.
+Zero days are like cheat codes – use them wisely, or the city floods 😎💡
+Do you also imagine lakes and rain when solving these problems? 😂
+
+Tweet 8 (Closing):
+So #DSA isn’t just arrays & maps…
+It’s strategic thinking in disguise!
+Next time it rains, think: “Which lake should I dry?” 🌧️🏞️
+#LeetCode #100DaysOfCode #Programming #Algo
+
+---
+
 ```cp
 class Solution {
 public:
