--- a/dsa3494.md
+++ b/dsa3494.md
@@ -52,6 +52,79 @@ m == mana.length
 
 ---
 
+Tweet 1 (Hook):
+#Day81 of #LearningInPublic
+Today's @LeetCode POTD ➡️ Find the Minimum Amount of Time to Brew Potions 🧙‍♂️💧
+Imagine wizards brewing potions in a lab… but timing is everything! Let’s break it down 🧵
+#DSA #100DaysOfCode
+
+Tweet 2 (Scenario):
+We have:
+
+n wizards
+
+m potions
+Each potion must go through all wizards in order.
+The time a wizard spends depends on their skill & the potion’s mana ⚡
+
+Tweet 3 (The Challenge):
+Potions can’t wait.
+
+Wizard 1 can’t start until Wizard 0 is done
+
+Wizard 2 can’t start until Wizard 1 is done
+…and so on
+⏳
+Goal: Minimize the total time it takes to brew all potions
+
+Tweet 4 (Analogy):
+Think of it like a conveyor belt in a factory:
+
+Each worker has a different speed
+
+Each item has a weight
+
+Items must move sequentially
+
+You want the fastest total production time 🏭
+
+Tweet 5 (Key Insight):
+
+The last potion always takes the sum of all wizard times
+
+For earlier potions, some wizards may wait for the next potion to arrive
+
+We calculate the maximum delay caused by each wizard
+
+Sum all delays → minimum total brewing time
+
+Tweet 6 (Visualization):
+Example: skill = [1,5,2,4], mana = [5,1,4,2]
+
+Potion 0 starts at t=0, goes wizard by wizard
+
+Potion 1 can start only when the first wizard is free
+
+Delays accumulate strategically, not randomly ⚡
+
+Total time = 110
+
+Tweet 7 (Engagement Tip):
+The lesson?
+DSA isn’t just about arrays & loops – it’s timing, coordination & optimization ⏱️
+Do you also imagine potions moving along conveyor belts when solving these? 😜
+
+Tweet 8 (Closing):
+So next time you see sequential tasks, think like a wizard 🧙‍♂️:
+
+Track each worker’s load
+
+Compute the max delay
+
+Brew efficiently ⚡
+
+---
+
 ```cpp
 class Solution {
 public:
