--- a/dsa3147.md
+++ b/dsa3147.md
@@ -37,6 +37,80 @@ Constraints:
 
 ---
 
+Tweet 1 (Hook):
+#Day82 of #LearningInPublic
+Today’s @LeetCode POTD is a spooky one 👻:
+3147. Taking Maximum Energy From the Mystic Dungeon 🏰✨
+
+You’re cursed! Every time you take energy from a magician, you teleport k steps ahead. Some magicians drain energy, some boost you. How to maximize energy? 🧵
+#DSA #LeetCode #100DaysOfCode
+
+Tweet 2 (Setup):
+Here’s the situation:
+
+Each magician has energy (+ or -)
+
+Once you absorb → you must teleport k steps forward
+
+This repeats until you fall off the line
+
+Your goal = pick the best starting magician to maximize total energy ⚡
+
+Tweet 3 (Analogy):
+Think of it like a video game dungeon 🎮:
+
+Enter at any door (magician)
+
+Every time you collect energy, the dungeon forces you to jump ahead k rooms
+
+You can’t stop, you can only choose the best entry point
+
+Tweet 4 (Core Idea):
+Key insight 🧠:
+
+From any magician i, your path is fixed (i → i+k → i+2k …)
+
+So we calculate the total energy of each possible path
+
+The answer = the maximum among all these paths
+
+Tweet 5 (Strategy):
+How to do it efficiently?
+
+Start from the end and move backwards 🔄
+
+For each magician, store → “energy at i + best path from i+k”
+
+This way, each magician knows the max energy if you start with them
+
+Tweet 6 (Example):
+energy = [5,2,-10,-5,1], k = 3
+
+Start at index 1 → path = 2 → 1 → total = 3 ✅
+
+Start at index 0 → path = 5 → -5 → total = 0
+
+Start at index 2 → path = -10 → total = -10
+Max = 3 🎉
+
+Tweet 7 (Engagement):
+The lesson?
+Sometimes in life (and DSA 😅), you don’t get to choose your next step…
+You only choose your starting point wisely. That alone decides your outcome 🔮
+
+Would you start at the risky high-energy magicians or play it safe? 👀
+
+Tweet 8 (Closing):
+That’s how we cracked today’s mystic dungeon 🏰✨
+👉 Always think in terms of fixed paths & dynamic programming backward.
+
+
+
+
+
+
+---
+
 ```cpp
 class Solution {
 public:
